tests/snapshots/tests__parser@attr_tests.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None, None, Some(errors))"

---
#[attr1(), attr2('(' Identifier '{' '}' Int ')')]fun test ()  {
	
}
#[Err]fun test ()  {
	
}

===
Expected token ']'. [51..52]
