tests/snapshots/tests__parser@bools.coff.snap
---
source: tests/tests.rs
expression: "test_util(path, false, false, false)"

---
fun asd ()  {
	#true
	#false
}

===
