tests/snapshots/tests__parser@function_with_blocks.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None, None, Some(errors))"

---
fun asd ()  {
	{
		{
			#1
		}
		{
			Err
		}
		{
			#3
		}
	}
}

===
Expected prefix token. [79..80]
