tests/snapshots/tests__parser@parameter_and_return_test.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None, None, Some(errors))"

---
fun asd (parm1 : Tt1, param2 : Tt2) -> void {
	
}

===
Undeclared type. [15..18]
Undeclared type. [28..31]
