tests/snapshots/tests__parser@simple_function.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None, None, Some(errors))"

---
fun asd ()  {
	(#2 + #3)
	#2
}

===
