tests/snapshots/tests__parser_spans@function_call.coff.snap
---
source: tests/tests.rs
expression: "test_util(path, true, false, false)"

---
[0..3] fun [4..5] g [5..6] ()  [7..45] {
	($[14..15] g[15..17] ())
	(($[23..26] asd).[26..27] [27..30] asd[30..42] ([31..32] #1, [34..35] #2, [37..38] #3, [40..41] #4))
}

===
